==> ryanplusplus/frdm-ke06z-tiny/src/peripheral/i2c1.c <==
/*!
 * @file
 * @brief
 */

#include <stddef.h>
#include "stm32f30x_i2c.h"
#include "stm32f30x_rcc.h"
#include "stm32f30x_gpio.h"
#include "stm32f30x_misc.h"
#include "i2c1.h"

static struct {
  i_tiny_i2c_t interface;

  union {
    const uint8_t* write;
    uint8_t* read;
  } buffer;
  uint8_t buffer_offset;

  tiny_i2c_callback_t callback;
  void* context;
} self;

void I2C1_EV_IRQHandler(void) {
  static volatile uint32_t flags;
  flags = I2C_ReadRegister(I2C1, I2C_Register_ISR);

  // TX data register empty or TX interrupt status (whatever that means)
  if(flags & (I2C_ISR_TXE | I2C_ISR_TXIS)) {
    I2C_SendData(I2C1, self.buffer.write[self.buffer_offset++]);
    return;
  }

  // RX Not Empty
  if(flags & I2C_ISR_RXNE) {
    self.buffer.read[self.buffer_offset++] = I2C_ReceiveData(I2C1);
    return;
  }

  // Transfer Complete
  if(flags & I2C_ISR_TC) {
    self.callback(self.context, true);
    return;
  }

  // Nack received from slave
  if(flags & I2C_ISR_NACKF) {
    I2C_SoftwareResetCmd(I2C1);
    self.callback(self.context, false);
    return;
  }

  // Stop condition generated by the peripheral
  if(flags & I2C_ISR_STOPF) {
    I2C_ClearITPendingBit(I2C1, I2C_IT_STOPF);
    self.callback(self.context, true);
    return;
  }

  // If we're still here then something bad (or at least unexpected) happened
  I2C_SoftwareResetCmd(I2C1);
  self.callback(self.context, false);
}

void I2C1_ER_IRQHandler(void) {
  I2C_SoftwareResetCmd(I2C1);
  self.callback(self.context, false);
}

static void write(
  i_tiny_i2c_t* _self,
  uint8_t address,
  bool prepare_for_restart,
  const uint8_t* buffer,
  uint8_t buffer_size,
  tiny_i2c_callback_t callback,
  void* context) {
  (void)_self;

  self.buffer.write = buffer;
  self.buffer_offset = 0;
  self.callback = callback;
  self.context = context;

  I2C_TransferHandling(
    I2C1,
    address << 1,
    buffer_size,
    prepare_for_restart ? I2C_SoftEnd_Mode : I2C_AutoEnd_Mode,
    I2C_Generate_Start_Write);
}

static void read(
  i_tiny_i2c_t* _self,
  uint8_t address,
  bool prepare_for_restart,
  uint8_t* buffer,
  uint8_t buffer_size,
  tiny_i2c_callback_t callback,
  void* context) {
  (void)_self;

  self.buffer.read = buffer;
  self.buffer_offset = 0;
  self.callback = callback;
  self.context = context;

  I2C_TransferHandling(
    I2C1,
    address << 1,
    buffer_size,
    prepare_for_restart ? I2C_SoftEnd_Mode : I2C_AutoEnd_Mode,
    I2C_Generate_Start_Read);
}

static void reset(i_tiny_i2c_t* _self) {
  (void)_self;
  I2C_SoftwareResetCmd(I2C1);
}

static const i_tiny_i2c_api_t api = { write, read, reset };

static void configure_clocks(void) {
  RCC_I2CCLKConfig(RCC_I2C1CLK_SYSCLK);
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C1, ENABLE);
  RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOB, ENABLE);
}

static void configure_pins(void) {
  GPIO_PinAFConfig(GPIOB, GPIO_PinSource6, GPIO_AF_4);
  GPIO_PinAFConfig(GPIOB, GPIO_PinSource7, GPIO_AF_4);

  GPIO_InitTypeDef gpio = { 0 };
  gpio.GPIO_Pin = GPIO_Pin_6 | GPIO_Pin_7;
  gpio.GPIO_Mode = GPIO_Mode_AF;
  gpio.GPIO_Speed = GPIO_Speed_50MHz;
  gpio.GPIO_OType = GPIO_OType_OD;
  gpio.GPIO_PuPd = GPIO_PuPd_UP;
  GPIO_Init(GPIOB, &gpio);
}

static void configure_i2c1(void) {
  I2C_InitTypeDef i2c = { 0 };
  i2c.I2C_Ack = I2C_Ack_Enable;
  i2c.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit;
  i2c.I2C_AnalogFilter = I2C_AnalogFilter_Enable;
  i2c.I2C_DigitalFilter = 0;
  i2c.I2C_Mode = I2C_Mode_I2C;
  i2c.I2C_OwnAddress1 = 0;
  i2c.I2C_Timing = 0x10808DD3; // Magic, pulled from STM32Cube
  I2C_Init(I2C1, &i2c);

  I2C_ITConfig(
    I2C1,
    I2C_IT_RXI | I2C_IT_TXI | I2C_IT_STOPI | I2C_IT_TCI | I2C_IT_NACKI | I2C_IT_ERRI,
    ENABLE);

  I2C_Cmd(I2C1, ENABLE);
}

static void configure_event_interrupt(void) {
  NVIC_InitTypeDef nvic = { 0 };
  nvic.NVIC_IRQChannel = I2C1_EV_IRQn;
  nvic.NVIC_IRQChannelPreemptionPriority = 1;
  nvic.NVIC_IRQChannelSubPriority = 0;
  nvic.NVIC_IRQChannelCmd = ENABLE;
  NVIC_Init(&nvic);
}

static void configure_error_interrupt(void) {
  NVIC_InitTypeDef nvic = { 0 };
  nvic.NVIC_IRQChannel = I2C1_ER_IRQn;
  nvic.NVIC_IRQChannelPreemptionPriority = 1;
  nvic.NVIC_IRQChannelSubPriority = 0;
  nvic.NVIC_IRQChannelCmd = ENABLE;
  NVIC_Init(&nvic);
}

i_tiny_i2c_t* i2c1_init(void) {
  configure_clocks();
  configure_pins();
  configure_event_interrupt();
  configure_error_interrupt();
  configure_i2c1();

  self.interface.api = &api;

  return &self.interface;
}
